mise a jour des models et templates location

--- a/gestionLocative/templates/base.html
+++ b/gestionLocative/templates/base.html
@@ -1,9 +1,9 @@
 {% extends "link.html" %}
 
 {% block body %}
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark navbar-immobilier mb-3">
     <div class="col d-flex justify-content-around m-auto">
-        <a class="navbar-brand" href="{% url 'dashboard' %}"><h1>solulocate</h1></a>
+        <a class="navbar-brand" href="{% url 'dashboard' %}"><h1 class="mb-0">Solulocate</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,30 +13,61 @@
     <div class="col collapse navbar-collapse text-center" id="navbarSupportedContent">
         <ul class="navbar-nav nav nav-tabs d-flex flex-wrap m-auto">
             <li class="nav-item active">
+                <a class="nav-link" href="{% url 'accueil' %}">Accueil</a>
+            </li>
+            {% if request.user.role == 'Locataire' %}{% endif %}
+            {% if request.user.role == 'Locataire' %}
+            <li class="nav-item active">
                 <a class="nav-link" href="{% url 'liste_locations' %}">Mes locations</a>
             </li>
+            {% endif %}
+            {% if request.user.role == 'Propriétaire' %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'read_user_properties' %}">Mes propriétés</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'create_propriete' request.user.id %}">Ajouter une propriété</a>
             </li>
+            {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'liste_factures' %}">Factures</a>
+            </li>
+            {% if request.user.role == 'Locataire' %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'liste_interventions' %}">Interventions</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'read_properties_dispo' %}">Biens disponibles</a>
+            </li>
+            {% if request.user.id %}²
             <div class="nav-item active p-2 m-auto">
-                <div class="input-group">
-                    <div class="input-group-text">
-                        <i class="fa fa-registered"></i>
-                    </div>
-                    <a href="{% url 'deconnexion' %}" class="btn btn-info text-light">Déconnexion</a>
+                <div class="input-group d-flex flex-nowrap">
+                    <div class="input-group-text"><i class="fa fa-registered"></i></div>
+                    <a href="{% url 'deconnexion' %}" class="btn btn-gold">Déconnexion</a>
                 </div>
             </div>
+            {% endif %}
         </ul>
     </div>
 </nav>
-<div class="container bg-info shadow rounded p-2 mb-3">
-    <div class="letter-spacing mb-2">
-        <h1 class="text-center">{{ title|upper }}</h1>
+<div class="justify-align">
+    <div class="container main-container py-4 overflow-hidden">
+        <div class="letter-spacing mb-3">
+            <h1 class="text-center page-title">{{ title|upper }}</h1>
+        </div>
+        {% if messages %}
+        <div class="container mb-3">
+            {% for message in messages %}
+            <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags|default:'info' }}{% endif %} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Fermer"></button>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% block content %}{% endblock content %}
     </div>
-    {% block content %}{% endblock content %}
 </div>
-<footer></footer>
+<footer class="py-3 text-center text-muted small"></footer>
 {% endblock body %}
